# ur3_ft300_hitbot

./: .gitignore  README.md
ros_ur_driver/: my_robot_calibration.yaml  ur3_with_gripper_valid.urdf
ros_ur_driver/install/: local_setup.sh  setup.sh
ros_ur_driver/install/robotiq_ft_sensor/lib/robotiq_ft_sensor/: rq_sensor
ros_ur_driver/install/robotiq_ft_sensor/share/robotiq_ft_sensor/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ur_driver/install/robotiq_ft_sensor/share/robotiq_ft_sensor/cmake/: robotiq_ft_sensorConfig.cmake
ros_ur_driver/install/ur/share/ur/: package.sh
ros_ur_driver/install/ur_bringup/share/ur_bringup/: package.sh
ros_ur_driver/install/ur_calibration/share/ur_calibration/: local_setup.sh  package.sh
ros_ur_driver/install/ur_controllers/share/ur_controllers/: local_setup.sh  package.sh
ros_ur_driver/install/ur_dashboard_msgs/local/lib/python3.10/dist-packages/ur_dashboard_msgs-2.11.0-py3.10.egg-info/: PKG-INFO
ros_ur_driver/install/ur_dashboard_msgs/share/ur_dashboard_msgs/: package.sh
ros_ur_driver/install/ur_description/share/ur_description/: package.sh
ros_ur_driver/install/ur_moveit_config/local/lib/python3.10/dist-packages/ur_moveit_config-2.11.0-py3.10.egg-info/: PKG-INFO
ros_ur_driver/install/ur_moveit_config/share/ur_moveit_config/: local_setup.sh  package.sh
ros_ur_driver/install/ur_moveit_config/share/ur_moveit_config/config/: controllers.yaml  kinematics.yaml
ros_ur_driver/install/ur_robot_driver/lib/ur_robot_driver/: ur_ros2_control_node
ros_ur_driver/install/ur_robot_driver/share/ur_robot_driver/: package.sh
ros_ur_driver/install/ur_robot_driver/share/ur_robot_driver/launch/: ur_control.launch.py
ros_ur_driver/install/z_efg_f_gripper/share/z_efg_f_gripper/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ur_driver/install/z_efg_f_gripper/share/z_efg_f_gripper/cmake/: z_efg_f_gripperConfig.cmake
ros_ur_driver/install/z_efg_f_gripper/share/z_efg_f_gripper/dae/: link_finger_left.dae
ros_ur_driver/install/z_efg_f_gripper_config/share/z_efg_f_gripper_config/: .setup_assistant  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ur_driver/install/z_efg_f_gripper_config/share/z_efg_f_gripper_config/cmake/: z_efg_f_gripper_configConfig.cmake
ros_ur_driver/install/z_efg_f_gripper_config/share/z_efg_f_gripper_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  z_efg_f_gripper.ros2_control.xacro  z_efg_f_gripper.srdf
ros_ur_driver/install/z_efg_f_gripper_config/share/z_efg_f_gripper_config/launch/: demo.launch.py  move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
ros_ur_driver/log/: latest_build
ros_ur_driver/src/Universal_Robots_ROS2_Description/urdf/: ur_macro.xacro
ros_ur_driver/src/Universal_Robots_ROS2_Driver/ur_moveit_config/launch/: ur_moveit.launch.py
ros_ur_driver/src/Universal_Robots_ROS2_Driver/ur_moveit_config/srdf/: test_srdf.xml  ur_macro.srdf.xacro
ros_ur_driver/src/Universal_Robots_ROS2_Driver/ur_robot_driver/: CMakeLists.txt
ros_ur_driver/src/Universal_Robots_ROS2_Driver/ur_robot_driver/config/: ur_controllers.yaml
ros_ur_driver/src/Universal_Robots_ROS2_Driver/ur_robot_driver/scripts/: gripper_moveit_io_bridge.py  gripper_moveit_io_bridge2.py  gripper_test_service.py
ros_ur_driver/src/robotiq/robotiq_ft_sensor/: CMakeLists.txt  package.xml
ros_ur_driver/src/robotiq/robotiq_ft_sensor/msg/: FtSensor.msg
ros_ur_driver/src/robotiq/robotiq_ft_sensor/nodes/: rq_sensor.cpp  rq_test_sensor.cpp
ros_ur_driver/src/robotiq/robotiq_ft_sensor/src/: rq_sensor_com.cpp
ros_ur_driver/src/robotiq/robotiq_ft_sensor/urdf/: robotiq_ft300.urdf.xacro
ros_ur_driver/src/z_efg_f_gripper/: CMakeLists.txt
ros_ur_driver/src/z_efg_f_gripper/dae/: link_finger_right.dae
ros_ur_driver/src/z_efg_f_gripper/urdf/: gripper.urdf  gripper_test.urdf
ros_ur_driver/src/z_efg_f_gripper_config/: CMakeLists.txt
ros_ur_driver/src/z_efg_f_gripper_config/config/: .z_efg_f_gripper.urdf.xacro.swp  initial_positions.yaml  ros2_controllers.yaml  z_efg_f_gripper.urdf.xacro
ros_ur_driver/src/z_efg_f_gripper_config/launch/: moveit_rviz.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py
