<?xml version="1.0"?>
<package format="2">
  <name>robotiq_ft_sensor</name>
  <version>1.0.0</version>
  <description>Package for reading data from a Robotiq Force Torque Sensor (ROS 2 Humble adapted)</description>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <author email="jsavoie20@gmail.com">Jonathan Savoie</author>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>  <!-- 内置WrenchStamped依赖 -->
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>       <!-- 新增：Trigger服务依赖 -->

  <!-- 注释掉所有msg/srv相关依赖（核心） -->
  <!-- <build_depend>rosidl_default_generators</build_depend> -->
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
